# dad-bot

./: .env  .gitignore  Cargo.toml  README.md  config.yaml.example
bot/: Cargo.toml
bot/src/: main.rs
bot/src/commands/: dadded.rs  mod.rs
bot/src/commands/utils/: dadded_manager.rs  mod.rs  rng_manager.rs
bot/src/config/: matrix.rs
bot/src/errors/: mod.rs
bot/src/integration_utils/: mod.rs
bot/src/matrix/: mod.rs  sync.rs
db/: Cargo.toml
db/entity/: Cargo.toml
db/entity/src/: dadded.rs  epochs.rs  lib.rs
db/migration/: Cargo.toml
db/migration/src/: lib.rs  m20220311_000001_create_epoch_table.rs  m20220311_000002_create_get_dadded_table.rs  util.rs
db/src/: errors.rs  lib.rs
db/src/utils/: dadded.rs  epochs.rs  integration_utils.rs  mod.rs
docker/: Dockerfile  build-image.sh  docker-compose.yml
docker/root/etc/cont-init.d/: 01-dad-run
docker/root/etc/fix-attrs.d/: 01-dad-data-dir
