[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
# tracing-test = "0.2"
